5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1745_3089.log
== TEST (2019-05-15 15:39:39) 
-- CODE:
Soma = 0
mov= int(input("movimentos: "))
while (mov > 0):
	soma = soma + mov
if ()
	
-- ERROR:
File "XXXX", line 5
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:43:41) 
-- CODE:
Soma = 0
mov= int(input("movimentos: "))
while (mov > 0):
	soma = soma + mov
if (mov < 0):
	print("Esquerda")
elif (mov > 0):
	print("Direita")
else:
	print("Inicial")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma = soma + mov
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:44:11) 
-- CODE:
Soma = 0
mov= int(input("movimentos: "))
while (mov > 0):
	soma = soma + mov
if (mov < 0):
	print("Esquerda")
elif (mov > 0):
	print("Direita")
else:
	print("Inicial")
	
-- EXECUTION TIME:
0.151792
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/3089/main.py", line 4, in <module>
    soma = soma + mov
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:08) 
-- CODE:
Soma = 0
mov= int(input("movimentos: "))
d = int(input("direito: "))
e = int(input("esquerdo: ")
while (mov > 0):
	soma = soma + mov
if (mov < 0):
	print("Esquerda")
elif (mov > 0):
	print("Direita")
else:
	print("Inicial")
	
-- ERROR:
File "XXXX", line 5
    while (mov > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:40) 
-- CODE:
Soma = 0
mov= int(input("movimentos: "))
d = int(input("direito: "))
e = int(input("esquerdo: ")
while (mov > 0):
	soma = soma + mov
if (mov < 0):
	print("Esquerda")
elif (mov > 0):
	print("Direita")
else:
	print("Inicial")
	
-- ERROR:
File "XXXX", line 5
    while (mov > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:49:03) 
-- CODE:
Soma = 0
mov= int(input("movimentos: "))
d = int(input("direito: "))
e = int(input("esquerdo: ")
while (:
	soma = soma + mov
if (mov < 0):
	print("Esquerda")
elif (mov > 0):
	print("Direita")
else:
	print("Inicial")
	
-- EXECUTION TIME:
0.306798
-- ERROR:
  File "/home/codebench/codes/1745/3089/main.py", line 5
    while (:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:53:33) 
-- CODE:
Soma = 0
num = int(input("movimentos: "))
d = int(input("direito: "))
e = int(input("esquerdo: ")
while (num != 0):
	soma = soma + mov
if (mov < 0):
	print("Esquerda")
elif (mov > 0):
	print("Direita")
else:
	print("Inicial")
	
-- ERROR:
File "XXXX", line 5
    while (num != 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
